task5/tests/group/testsHW5/output/test12.out
lli: <stdin>:30:15: error: use of undefined value '%-22086'
%t9 = zext i8 %-22086 to i32
              ^

